--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -4,7 +4,22 @@
   gap: 20px;
   margin-top: 10px;
   @media (max-width: 768px) {
-    padding: 20px;
+    padding: 20px 20px 70px;
     margin: 0;
+  }
+
+  .pagination-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 10px;
+    @media (max-width: 768px) {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      background-color: #fff;
+      padding: 10px 0px;
+      box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+    }
   }
 }
